incliusão do botão de limpar o formulario

--- a/contato.html
+++ b/contato.html
@@ -60,7 +60,7 @@
 
         <button type="submit">Cadatrar</button>
 
-        
+        <button type="reset">Limpar Formulario</button>
 
     </form> <br>
     
