--- a/contato.html
+++ b/contato.html
@@ -60,9 +60,9 @@
 
         <button type="submit">Cadatrar</button>
 
-        <button type="reset">Limpar Formulario</button>
+        <button type="reset">Limpar Formulario </button>
 
-    </form> <br>
+    </form>
     
    
 </body>
