--- a/contato.html
+++ b/contato.html
@@ -57,10 +57,11 @@
             <option value="MT">MT</option>
 
         </Select><br><br>
-
+        
+        <input type="color" name="color" id="color">
         <button type="submit">Cadatrar</button>
 
-        <button type="reset">Limpar Formulario </button>
+        <button type="reset">Limpar Formulario</button>
 
     </form>
     
