--- a/contato.html
+++ b/contato.html
@@ -65,7 +65,10 @@
 
     </form>
     
-   
+   <script src="text/javascript">
+        var a = document.getElementById("color")
+        alert(a.value)
+   </script>
 </body>
 
 </html>
