--- a/contato.html
+++ b/contato.html
@@ -62,12 +62,18 @@
         <button type="submit">Cadatrar</button>
 
         <button type="reset">Limpar Formulario</button>
+        <button type="button" onclick="cor()">Alertar a cor</button>
 
     </form>
     
    <script src="text/javascript">
+
+
+    function cor() {
         var a = document.getElementById("color")
-        alert(a.value)
+            alert(a.value)
+    }
+        
    </script>
 </body>
 
